--- a/Project_slf4jTestNGSetup/pom.xml
+++ b/Project_slf4jTestNGSetup/pom.xml
@@ -34,15 +34,22 @@
 	  <version>1.7.12</version>
 	  <scope>test</scope> <!--  do not ship actual slf4j bindings -->
 	</dependency>
-		
-<!--       
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+    </dependency>
+
+
+<!--
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
---> 
+-->
    
   </dependencies>
 </project>
